fixed cropping of logo

--- a/css/index.css
+++ b/css/index.css
@@ -142,6 +142,8 @@ html {
   transition: transform 0.5s cubic-bezier(0.6, -0.28, 0.735, 0.045);
   object-fit: contain;
   object-position: left;
+  margin-right: 2rem;
+  /* for the logo animation to not be cropped on the right */
 }
 #masthead.site-header .site-logo.collapsed img {
   transform: translateX(-90%);
